[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spa-deploy"
version = "0.1.0"
description = "Deploy Vite/Yarn SPAs to S3 with optional CloudFront"
requires-python = ">=3.9"
dependencies = ["boto3"]

[project.scripts]
spa-deploy = "spa_deploy:main"
